add resume online link and change link style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         font-size: 24px;
         text-align: center;
       }
+      a {
+        color: #337ab7;
+      }
+      a:visited {
+        color: #337ab7;
+      }
+      a:active, a:hover {
+        color: #337ab7;
+      }
       p {
         margin: 5px 0;
       }
@@ -18,6 +27,10 @@
       }
       li {
         list-style: none;
+      }
+      footer {
+        padding: 30px;
+        color: gray;
       }
       .container {
         width: 960px;
@@ -65,7 +78,7 @@
 
   <body>
     <div class="container">
-      <h1>陈军强个人简历</h1>
+      <h1>个人简历</h1>
 
       <div class="section">
         <h2 class="title">基本信息</h2>
@@ -75,7 +88,7 @@
             <li>学校: 天水师范学院</li>
             <li>专业: 电子信息科学与技术</li>
             <li>手机: 15958013241</li>
-            <li>邮箱: <a href="mailto:williamherrychina@gmail.com?Subject=小伙子很不错,来上班吧:)">WilliamHerryChina@Gmail.com</a></li>
+            <li>邮箱: <a href="mailto:williamherrychina@gmail.com?Subject=小伙子很不错嘛,来上班吧:)">WilliamHerryChina@Gmail.com</a></li>
             <li>Github: <a href="http://github.com/williamherry">http://github.com/williamherry</a></li>
             <li>Blog: <a href="http://williamherry.com">http://williamherry.com</a></li>
           </ul>
@@ -150,6 +163,10 @@
           <p>对代码质量有较严格的管控.</p>
         </div>
       </div>
+
+      <footer>
+        <p>在线地址: <a href="https://github.com/williamherry/resume">https://github.com/williamherry/resume</a><p>
+      </footer>
     </div>
   </body>
 </html>
