--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li>较熟悉基本的前端开发, Jquery和Bootstrap用的比较多,工作中前后端未分开</li>
             <li>熟悉主流的关系数据库, PostgreSQL用的比较多</li>
             <li>了解流行的前端框架, 工作中使用过EmberJS, ReactJS</li>
-            <li>英语读写能力良好,看文档视频没有问题</li>
+            <li>英语听读写能力良好,看文档视频没有问题</li>
           </ul>
         </div>
       </div>
@@ -111,6 +111,21 @@
         <h2 class="title">工作经历</h2>
         <div class="content">
           <ul class="experiences">
+            <li>
+              <header>
+                <h4>Ruby on Rails Developer</h4>
+                <h5><a href="http://www.abcam.com" name="company">宜康（杭州）生物技术有限公司</a></h5>
+                <span class="experience-date">2015.7 – Present (2年零4个月)</span>
+              </header>
+              <ul class="description">
+                <li>开发和维护公司内部管理抗体研发过程，记录抗体研发数据的系统 YCA LIMS (主要维护)</li>
+                <li>开发和维护公司考勤系统</li>
+                <li>维护美国分公司在用的抗体开发销售系统 Abserv </li>
+                <li>负责公司服务器的安装维护</li>
+                <li>负责维护公司开发环境和监控服务, Gitlab, Munin</li>
+              </ul>
+            </li>
+            <br />
             <li>
               <header>
                 <h4>Ruby on Rails Developer</h4>
